data/forge_javadoc/1.7.10/raw/net/minecraft/command/CommandGameMode.md
---
title: "CommandGameMode"
description: "public class CommandGameMode extends CommandBase"
package: "net/minecraft/command"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/command/CommandGameMode.html"
sourceType: javadoc
---

# CommandGameMode

**Inheritance:** java.lang.Object → net.minecraft.command.CommandBase → net.minecraft.command.CommandGameMode

## Class signature

```java
public class CommandGameMode extends CommandBase
```

## Constructors

- `CommandGameMode()`

## Methods

- `java.util.List addTabCompletionOptions(ICommandSender p_71516_1_, java.lang.String[] p_71516_2_)`
- `java.lang.String getCommandName()`
- `java.lang.String getCommandUsage(ICommandSender p_71518_1_)`
- `protected WorldSettings.GameType getGameModeFromCommand(ICommandSender p_71539_1_, java.lang.String p_71539_2_)`
- `protected java.lang.String[] getListOfPlayerUsernames()`
- `int getRequiredPermissionLevel()`
- `boolean isUsernameIndex(java.lang.String[] p_82358_1_, int p_82358_2_)`
- `void processCommand(ICommandSender p_71515_1_, java.lang.String[] p_71515_2_)`
